# Multi-Agent-System-for-E2E-RPA-Test-Automation

./: .env.example  .gitignore  APPFLOW.md  CONVENTIONS.md  LICENSE  PHASES.md  PRD.md  README.md  Roadmap.md  STATUS.md  TRD.md  WORKFLOW.md  conftest.py  context.md  decisions.md  diagnose_ocr.py  install.bat  install.py  progress.md  pyproject.toml  results.xml  run.bat  run.py  setup.py
api/: main.py  run_store.py  security.py  spec_builder.py  user_store.py
aura/: main.py
config/: local_config.json  logging_setup.py  settings.py  tool_registry.yaml  users.json  vault.key
docs/: APPFLOW.md  PHASES.md  PRD.md  PROJECT_OVERVIEW.md  README.md  Roadmap.md  STATUS.md  TRD.md  WORKFLOW.md  debug.md  debug_report.md  decisions.md  external_repos.md  optional_external_integrations_design.md  progress.md
logs/: assertion_audit.jsonl  audit.jsonl
orchestrator/: assertion_audit_log.py  audit_logger.py  autoscan.py  backend_router.py  capability_adapter.py  capability_router.py  decision_trace_log.py  guardrails.py  healing_loop.py  hermes_client.py  http_retry.py  kernel.py  memory.py  quarantine_store.py  report_aggregator.py  run_engine.py  scheduler.py  schemas.py  skill_store.py  spec_validator.py  ui_audit_runner.py  webhook_listener.py
reports/: junit.py  process_report.py  render.py
requirements_input/: example_login_flow.md
runtime/: errors.py
scripts/: build_exe.ps1  check_silent_excepts.py  install_llm_backend.ps1  setup_windows.ps1
target_app/: demo_login_app.py
tests/: conftest_local_server.py  test_16_categories_verification.py  test_accessibility_adapter.py  test_action_type_coverage.py  test_analytics_api.py  test_api_service.py  test_assertion_audit_log.py  test_assertions.py  test_automation_anywhere.py  test_autoscan.py  test_bot_validation_cross_check.py  test_browser_hook.py  test_capabilities.py  test_capability_egress_controls.py  test_cli.py  test_cloud_workflow_adapters.py  test_code_auditor.py  test_composio_adapter.py  test_core_adapters.py  test_crash_boundary_and_logging.py  test_cross_browser.py  test_cross_modal_healing.py  test_db_adapter.py  (+57 more)
(+86 files in other folders)
