[project]
name = "aura"
version = "0.1.0"
description = "AURA - Autonomous Unified RPA Agent: offline, vision-first, self-healing multi-agent QA test automation"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "mss>=9.0.1",
    "pillow>=10.2",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.9",
    "faker>=24.0",
    "apscheduler>=3.10",
    "pypdf>=4.1",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "openpyxl>=3.1",     # Phase 15: Excel Adapter
    "paramiko>=3.4", 
    "boto3>=1.34",
    "azure-storage-blob>=12.19",   # Phase 16: Azure adapter
    "google-cloud-storage>=2.16",  # Phase 16: GCP adapter
    "pymupdf>=1.24",               # Phase 16: PDF page rasterization for OCR fallback
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8",
    "playwright>=1.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
report = [
    "weasyprint>=61.0",
]
llm = [
    "llama-cpp-python>=0.2.90",
]

[project.scripts]
aura = "aura.main:main"

[build-system]
requires = ["setuptools>=75.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly anchor the source root so pip's build-isolation subprocess
# (which changes cwd to a temp dir) can still find the packages.
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    ".venv*", "build*", "dist*", "*.egg-info*",
    "tests*", "docs*", "scripts*", "target_app*",
    "webui*", "logs*", "requirements_input*",
]



[tool.pytest.ini_options]
# Only collect functions named test_* as tests; prevents pytest from trying
# (and failing) to collect pydantic models like TestSpec/TestStep just
# because their names start with "Test".
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
